@@ -1,3 +1,6 @@
+2004-11-07  Pascal Scheffers  <pascal@scheffers.net>
+	* tkchat.tcl: Added jabber history loading
+
 2004-11-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Merged in improvements for tile and winico handling
